tests/golden/compile-pass/struct_method_mut_self.rua
struct Counter {
    value: i64,
}

impl Counter {
    fn increment(&mut self) {
        self.value = self.value + 1;
    }
}

fn main() {
    let mut counter = Counter { value: 0 };
    counter.increment();
}
