tests/golden/compile-fail/call_wrong_type_method.rua
struct Counter { value: i64 }

impl Counter {
    fn set(&mut self, value: i64) { self.value = value; }
}

fn update(counter: Counter) {
    counter.set(false);
}
